--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,1 +1,2 @@
-user.properties.file=C:\\Users\\Tio\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.mysql-connector-java-5.1.42-bin.jar-1=C:\\Users\\ASEP\\Downloads\\mysql-connector-java-5.1.42\\mysql-connector-java-5.1.42\\mysql-connector-java-5.1.42-bin.jar
+user.properties.file=C:\\Users\\ASEP\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
