--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,9 +34,9 @@ file.reference.mysql-connector-java-5.1.42-bin.jar-1=C:\\Users\\Tio\\Downloads\\
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.mysql-connector-java-5.1.42-bin.jar-1}:\
     ${file.reference.mysql-connector-java-5.1.42-bin.jar}:\
-    ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.42-bin.jar-1}
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
