--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,6 @@
-file.reference.mysql-connector-java-5.1.42-bin.jar-1=C:\\Users\\ASEP\\Downloads\\mysql-connector-java-5.1.42\\mysql-connector-java-5.1.42\\mysql-connector-java-5.1.42-bin.jar
+compile.on.save=false
+do.depend=false
+do.jar=true
+javac.debug=true
+javadoc.preview=true
 user.properties.file=C:\\Users\\ASEP\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
