--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,12 +30,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-5.1.42-bin.jar=C:\\Users\\ASEP\\Downloads\\mysql-connector-java-5.1.42\\mysql-connector-java-5.1.42\\mysql-connector-java-5.1.42-bin.jar
-file.reference.mysql-connector-java-5.1.42-bin.jar-1=C:\\Users\\Tio\\Downloads\\mysql-connector-java-5.1.42\\mysql-connector-java-5.1.42-bin.jar
+file.reference.mysql-connector-java-5.1.42-bin.jar-1=mysql-connector-java-5.1.42-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.42-bin.jar-1}:\
-    ${file.reference.mysql-connector-java-5.1.42-bin.jar}:\
     ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
